2006-09-25  Chong Yidong  <cyd@stupidchicken.com>

	* gnus-demon.el (gnus-demon): Use with-local-quit to avoid hangs.

2006-09-19  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* nnslashdot.el (nnslashdot-request-article): Update end-of-article
	regexp.  Articles containing quotation were cut prematurely.

2006-09-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-cite-original-without-signature): Use nobody by
	default for the value of From header.
	(message-cite-original): Ditto.
	(message-reply): Ditto.

2006-09-09  Reiner Steib  <Reiner.Steib@gmx.de>

	* pop3.el (pop3-leave-mail-on-server): Mention problem of duplicate
	mails in the doc string.  Add some URLs in comment.

2006-09-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2047.el (rfc2047-quote-special-characters-in-quoted-strings): Fix
	backslashes handling and the way to find boundaries of quoted strings.

2006-09-06  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-art.el (gnus-button-regexp, gnus-button-marker-list)
	(gnus-button-last): Move up.  Convert comments into doc strings.

2006-09-04  Chong Yidong  <cyd@stupidchicken.com>

	* message.el (message-send-mail-with-sendmail): Look for sendmail in
	several common directories.

2006-09-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-decode-encoded-words): Make it fast.

2006-09-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-decode-encoded-words): Don't infloop in XEmacs.

	* rfc2047.el (rfc2047-strip-backslashes-in-quoted-strings): Decode `\\'
	in quoted string into `\'.

2006-09-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2047.el (rfc2047-quote-special-characters-in-quoted-strings):
	Use standard-syntax-table.

2006-09-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-decode-address-function): New variable.
	(article-decode-encoded-words): Use it to decode headers which are
	assumed to contain addresses.
	(gnus-mime-delete-part): Remove useless `or'.
