@@ -1,3 +1,8 @@
+2006-10-02  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* gnus.texi (Foreign Groups): Say where change of editing commands are
+	stored.  Add reference to `gnus-parameters'.
+
 2006-10-01  Karl Berry  <karl@gnu.org>
 
 	* custom.texi (Customization Groups): page break to keep example buffer
